[package]
name = "pyrus_kaiko"
version = "0.1.0"
edition = "2024"

#build='home.rs'
lib.path ='src/lib.rs'
[lib]
# Raw test of rust, windows python, and ideally Numpy mixed.

name = "pyrus_kaiko"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25"
pyo3-arrow = "0.11.0"
arrow-select = "56.0.0"
arrow = "56.0.0"
arrow-schema = "56.0.0"
macro_const = "0.1.0"
sprintf = "0.3.1"
flate2 = "1.1.2" 

